[package]
name = "krypt"
version = "0.1.1-alpha.0"
authors = ["Justus K. <justus.k@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Krypt is swiss-army knife for encoding, decoding, encryption, decryption and hashing in the terminal."
homepage = "https://github.com/Stupremee/krypt"
documentation = "https://docs.rs/krypt"
repository = "https://github.com/Stupremee/krypt"

[lib]
name = "krypt"
path = "src/lib.rs"

[[bin]]
name = "krypt"
path = "src/main.rs"

[dependencies]
hex = "0.4.0"
digest = "0.8.1"
md2 = "0.8.0"
md4 = "0.8.0"
md-5 = "0.8.0"
sha-1 = "0.8.2"
sha2 = "0.8.1"
sha3 = "0.8.2"
streebog = "0.8.0"
data-encoding = "2.1.2"
structopt = "0.3.9"
clap = "2.33.0"
blake3 = "0.1.3"
atty = "0.2.14"
hexyl = "0.6.0"
