[package]
name = "krypt"
version = "0.2.0-alpha.0"
authors = ["Justus K. <justus.k@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Krypt is swiss-army knife for encoding, decoding, encryption, decryption and hashing in the terminal."
homepage = "https://github.com/Stupremee/krypt"
documentation = "https://docs.rs/krypt"
repository = "https://github.com/Stupremee/krypt"
readme = "README.md"

[lib]
name = "krypt"
path = "src/lib.rs"

[[bin]]
name = "krypt"
path = "src/main.rs"

[dependencies]
log = "0.4.8"
structopt = "0.3.14"
color-backtrace = "0.4.2"
belog = { version = "0.1.0", features = ["colored"] }
termcolor = "1.1.0"
