[package]
name = "krypt"
version = "0.2.0-alpha.0"
authors = ["Justus K. <justus.k@protonmail.com>"]
edition = "2018"
license = "GPL-3.0-only"
description = "Krypt is swiss-army knife for encoding, decoding, encryption, decryption and hashing in the terminal."
homepage = "https://github.com/Stupremee/krypt"
documentation = "https://docs.rs/krypt"
repository = "https://github.com/Stupremee/krypt"
readme = "README.md"

[lib]
name = "krypt"
path = "src/lib.rs"

[[bin]]
name = "krypt"
path = "src/main.rs"

[dependencies]
log = "0.4.8"
structopt = "0.3.14"
color-backtrace = "0.4.2"
belog = { version = "0.1.0", features = ["colored"] }
termcolor = "1.1.0"
hex = "0.4.2"
digest = "0.9.0"

# hash algorithms
blake2 = "0.9.0"
# we have to use my fork because there is the latest digest version
blake3 = { git = "https://github.com/Stupremee/BLAKE3", branch = "bump-digest-crypto_mac" }
md2 = "0.9.0"
md4 = "0.9.0"
md-5 = "0.9.0"
sha2 = "0.9.0"
sha3 = "0.9.0"
shabal = "0.3.0"
streebog = "0.9.0"
whirlpool = "0.9.0"
sha-1 = "0.9.0"
